# form7-pdf-parser

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  labeler.yml  release.yml
docs/: release-process.md
src/form7_pdf_parser/: __init__.py  annotation.py  atomic.py  cli.py  exceptions.py  models.py  parsing.py  pdf.py
tests/: test_annotation.py  test_atomic.py  test_cli.py  test_parsing.py  test_pdf.py  test_public_api.py
tests/fixtures/: OFL.txt  README.md  parsing-cases.json
tools/: generate_fixture.py
